Update dependencies and Gradle, along with small cleanup